--- a/app/src/main/res/drawable/ic_mic_on.xml
+++ b/app/src/main/res/drawable/ic_mic_on.xml
@@ -1,9 +1,25 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+
+    <!-- centered Oval shape -->
     <path
         android:fillColor="#4CAF50"
-        android:pathData="M12,14c1.66,0 2.99,-1.34 2.99,-3L15,5c0,-1.66 -1.34,-3 -3,-3S9,3.34 9,5v6c0,1.66 1.34,3 3,3zM17.3,11c0,3.53 -2.61,6.44 -6,6.93V21h-2v-3.07c-3.39,-0.49 -6,-3.4 -6,-6.93h2c0,2.81 2.29,5.1 5.1,5.1s5.1,-2.29 5.1,-5.1h2z"/>
+    android:pathData="M 15 6 v 5 a 3 3 0 0 1 -6 0 v -6 a 3 3 0 0 1 6 0 z"/>
+
+
+    <!-- microphone base -->
+    <path
+        android:fillColor="#4CAF50"
+        android:pathData="M 17.3 11 c -0.3 7 -10.3 7 -10.7 0 H 5 c 0 3.2 2.72 6.23 6 6.72 V 21 h 2 v -3.28 C 16.41 17.2 19 14.23 19 11 z"/>
+
+<!--        &lt;!&ndash; Inner accent ring &ndash;&gt;-->
+<!--    <path-->
+<!--        android:pathData="M12,1 C8.69,1 6,3.69 6,7 c0,0.5 0.07,0.99 0.18,1.46l1.95,-1.95C8.04,6.18 8,5.59 8,5c0,-2.21 1.79,-4 4,-4s4,1.79 4,4c0,0.59 -0.04,1.18 -0.13,1.51l1.95,1.95C17.93,7.99 18,7.5 18,7C18,3.69 15.31,1 12,1z"-->
+<!--        android:strokeWidth="0.8"-->
+<!--        android:strokeColor="#81C784"-->
+<!--        android:fillColor="@android:color/transparent"/>-->
 </vector>
