--- a/app/src/main/res/drawable/ic_mic_off.xml
+++ b/app/src/main/res/drawable/ic_mic_off.xml
@@ -16,4 +16,12 @@
     <path
         android:fillColor="#757575"
         android:pathData="M19,11h-1.7c0,0.74 -0.16,1.43 -0.43,2.05l1.23,1.23c0.56,-0.98 0.9,-2.09 0.9,-3.28zM14.98,11.17c0,-0.06 0.02,-0.11 0.02,-0.17V5c0,-1.66 -1.34,-3 -3,-3S9,3.34 9,5v0.18l5.98,5.99zM4.27,3L3,4.27l6.01,6.01V11c0,1.66 1.33,3 2.99,3 0.22,0 0.44,-0.03 0.65,-0.08l1.66,1.66c-0.71,0.33 -1.5,0.52 -2.31,0.52 -2.76,0 -5.3,-2.1 -5.3,-5.1H5c0,3.41 2.72,6.23 6,6.72V21h2v-3.28c0.91,-0.13 1.77,-0.45 2.54,-0.9L19.73,21 21,19.73 4.27,3z"/>
+
+
+    <!-- Lock icon top left -->
+    <path
+        android:fillColor="#757575"
+        android:fillType="evenOdd"
+        android:pathData="M 7.5 4.5 V 3.5 c 0 -1.655 -1.345 -3 -3 -3 S 1.5 1.845 1.5 3.5 v 1 H 1 v 6 h 7 V 4.5 h -0.5 z m -3 -3 c 1.105 0 2 0.895 2 2 v 1 H 2.5 V 3.5 c 0 -1.105 0.895 -2 2 -2 z M 4.5 5 c -0.55 0 -1 0.45 -1 1 s 0.45 1 1 1 s 1 -0.45 1 -1 s -0.45 -1 -1 -1 z m 0 2 h -0.5 v 2 h 1 v -2 h -0.5 z"/>
+
 </vector>
