--- a/app/src/main/res/drawable/ic_mic_on.xml
+++ b/app/src/main/res/drawable/ic_mic_on.xml
@@ -16,10 +16,11 @@
         android:fillColor="#4CAF50"
         android:pathData="M 17.3 11 c -0.3 7 -10.3 7 -10.7 0 H 5 c 0 3.2 2.72 6.23 6 6.72 V 21 h 2 v -3.28 C 16.41 17.2 19 14.23 19 11 z"/>
 
-<!--        &lt;!&ndash; Inner accent ring &ndash;&gt;-->
-<!--    <path-->
-<!--        android:pathData="M12,1 C8.69,1 6,3.69 6,7 c0,0.5 0.07,0.99 0.18,1.46l1.95,-1.95C8.04,6.18 8,5.59 8,5c0,-2.21 1.79,-4 4,-4s4,1.79 4,4c0,0.59 -0.04,1.18 -0.13,1.51l1.95,1.95C17.93,7.99 18,7.5 18,7C18,3.69 15.31,1 12,1z"-->
-<!--        android:strokeWidth="0.8"-->
-<!--        android:strokeColor="#81C784"-->
-<!--        android:fillColor="@android:color/transparent"/>-->
+
+    <!-- Lock icon top left -->
+    <path
+        android:fillColor="#4CAF50"
+        android:fillType="evenOdd"
+        android:pathData="M 7.5 4.5 V 3.5 c 0 -1.655 -1.345 -3 -3 -3 S 1.5 1.845 1.5 3.5 v 1 H 1 v 6 h 7 V 4.5 h -0.5 z m -3 -3 c 1.105 0 2 0.895 2 2 v 1 H 2.5 V 3.5 c 0 -1.105 0.895 -2 2 -2 z M 4.5 5 c -0.55 0 -1 0.45 -1 1 s 0.45 1 1 1 s 1 -0.45 1 -1 s -0.45 -1 -1 -1 z m 0 2 h -0.5 v 2 h 1 v -2 h -0.5 z"/>
+
 </vector>
