--- a/app/src/main/res/drawable/ic_mic_pause.xml
+++ b/app/src/main/res/drawable/ic_mic_pause.xml
@@ -20,4 +20,10 @@
         android:fillColor="#FF9800"
     android:pathData="M8,16h2v4H8zM14,16h2v4h-2z"/>
 
+    <!-- Lock icon top left -->
+    <path
+        android:fillColor="#FF9800"
+        android:fillType="evenOdd"
+        android:pathData="M 7.5 4.5 V 3.5 c 0 -1.655 -1.345 -3 -3 -3 S 1.5 1.845 1.5 3.5 v 1 H 1 v 6 h 7 V 4.5 h -0.5 z m -3 -3 c 1.105 0 2 0.895 2 2 v 1 H 2.5 V 3.5 c 0 -1.105 0.895 -2 2 -2 z M 4.5 5 c -0.55 0 -1 0.45 -1 1 s 0.45 1 1 1 s 1 -0.45 1 -1 s -0.45 -1 -1 -1 z m 0 2 h -0.5 v 2 h 1 v -2 h -0.5 z"/>
+
 </vector>
